After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794109 - segfault in udisks_partition_table_get_type_
segfault in udisks_partition_table_get_type_
Status: RESOLVED FIXED
Product: gnome-disk-utility
Classification: Core
Component: Disks UI
3.27.x
Other Linux
: Normal normal
: ---
Assigned To: Kai Lüke
gnome-disk-utility-maint
Depends on:
Blocks:
 
 
Reported: 2018-03-06 10:06 UTC by Sebastien Bacher
Modified: 2018-03-12 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix NULL deref when no partition table is present (2.83 KB, patch)
2018-03-06 11:50 UTC, Kai Lüke
committed Details | Review

Description Sebastien Bacher 2018-03-06 10:06:42 UTC
The Ubuntu bug tracker started received reports of segfault in gnome-disks since the 3.27 update

Stacktrace from 3.27.90

"#0  0x00007f2a885939f9 in udisks_partition_table_get_type_ (object=0x0) at udisks-generated.c:16618
No locals.
  • #1 finish_cb
    at ../src/disks/gducreateformatdialog.c line 356
  • #2 g_closure_invoke
    at ../../../../gobject/gclosure.c line 804
  • #3 signal_emit_unlocked_R
    at ../../../../gobject/gsignal.c line 3635
  • #4 g_signal_emit_valist
    at ../../../../gobject/gsignal.c line 3391
  • #5 g_signal_emit
    at ../../../../gobject/gsignal.c line 3447
  • #6 _g_closure_invoke_va
    at ../../../../gobject/gclosure.c line 867
  • #7 g_signal_emit_valist
    at ../../../../gobject/gsignal.c line 3300
  • #8 g_signal_emit
    at ../../../../gobject/gsignal.c line 3447
  • #9 gtk_button_do_release
    at ../../../../gtk/gtkbutton.c line 1843
  • #10 gtk_real_button_released
    at ../../../../gtk/gtkbutton.c line 1961

Comment 1 Kai Lüke 2018-03-06 11:50:01 UTC
Created attachment 369378 [details] [review]
Fix NULL deref when no partition table is present

Thanks for forwarding it!

Unfortunately this was found by users who try to format their USB drives without a partiton table. This just shows how urgend an implementation (and refinement) of the long-standing UI mockups is.
Comment 2 Ondrej Holy 2018-03-06 12:55:52 UTC
Review of attachment 369378 [details] [review]:

Looks ok, thanks!
Comment 3 Kai Lüke 2018-03-12 12:29:53 UTC
Will be part of 3.28.0.

This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.
Comment 4 Sebastien Bacher 2018-03-12 13:02:06 UTC
thanks!