Fix NULL deref when no partition table is present

When creating a filesystem on a block device without
a partiton table, udisks_partition_table_get_type_
crashed because it was invoked with table as NULL.

However, this code should not even be executed if
no partition is to be added, so just move it into
the appropriate branch where it belongs to.

https://bugzilla.gnome.org/show_bug.cgi?id=794109